UHF-8227: Fixed icon alignment in the accordion on RTL languages.

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -20,10 +20,10 @@
 
 .accordion-item__icon {
   display: inline-flex;
-  margin-right: $spacing-half;
+  margin-inline-end: $spacing-half;
 
   @include breakpoint($breakpoint-l) {
-    margin-right: $spacing;
+    margin-inline-end: $spacing;
   }
 
   .hel-icon {
